-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 11.0.13
-
Component/s: hotspot
-
b01
-
aarch64
Backport 8248414 to openjdk11 removed a line which was not supposed to be removed, need to restore it asap.
https://github.com/openjdk/jdk11u/commit/bf01efaa24c58bcc87d465325e8c130c35148294#diff-0f4150a9c607ccd590bf256daa800c0276144682a92bc6bdced5e8bc1bb81f3aL4246
the issue was found during testing of zulu11 with latest openjdk fixes on macos12beta_arm64. Affects linux_aarch64 too when working with memory regions above 32-bits limit
jdk16/17 aren't affected
https://github.com/openjdk/jdk11u/commit/bf01efaa24c58bcc87d465325e8c130c35148294#diff-0f4150a9c607ccd590bf256daa800c0276144682a92bc6bdced5e8bc1bb81f3aL4246
the issue was found during testing of zulu11 with latest openjdk fixes on macos12beta_arm64. Affects linux_aarch64 too when working with memory regions above 32-bits limit
jdk16/17 aren't affected
- relates to
-
JDK-8248414 AArch64: Remove uses of long and unsigned long ints
-
- Resolved
-