8273939: Backport of 8248414 to JDK11 breaks MacroAssembler::adrp

Reviewed-by: mdoerr